@@ -1,3 +1,13 @@
+Tue Jul 12 13:49:32 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* signal.c (sig_trap): don't permit to change a signal handler which
+	  the interpreter reserved.
+	* signal.c (reserved_signal_p): ditto.
+	  [Bug #2616] [ruby-core:27625]
+
+	* test/ruby/test_signal.rb (TestSignal#test_reserved_signal):
+	  added a test for reserved signal.
+
 Tue Jul 12 11:58:28 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/setup.mak: support x86-amd64 cross compile environment.
